[package]
name = "orbit"
version = "2.4.13"
edition = "2021"
description = "A WiFi/Bluetooth manager for Wayland"
authors = ["Amadeus"]
license = "MIT"

[dependencies]
gtk4 = "0.11.3"
glib-unix = "0.22"
gdk-pixbuf = "0.22"
gtk4-layer-shell = "0.8"
zbus = { version = "5.15", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"
clap = { version = "4", features = ["derive"] }
async-channel = "2"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde_json = "1.0.149"
nokhwa = { version = "0.10", features = ["input-native"] }
bardecoder = "0.5"
image = "0.24"
starship-battery = "0.11"
tempfile = "3.27.0"
chrono = "0.4.44"

[profile.release]
opt-level = 3
lto = true
strip = true
